# Reinforcement_learning_cpp_parallel

./: .gitignore  Build and use note  CMakeLists.txt  LICENSE  Network.cpp  README.md  config  learning_curve.m  learning_curve_.m  learning_curve_multiple.asv  learning_curve_multiple.m  try.sl
RL3linkFishCppPort/: main.cpp
RL3linkFishCppPortMerge/: .cart_pole.cpp.swp  Build and use note  CMakeLists.txt  Makefile  Memory.h  cart_MPI.h  cart_pole.cpp  cart_pole.h  custom_action.h  eigenmvn.h  learning_curve.m  log.txt  main.cpp  ppo_nn.h
archived/: Learner.cpp  Network.h  compile_and_run.txt  eigenmvn.h
archived/RL3linkFishCppPort/: CMakeLists.txt  fetch_dependencies.sh
archived/single_environment/: cart_pole.cpp  custom_action.h
archived/trail_multi_environment/: cart_MPI.h  cart_pole.cpp  custom_action.h  test_memory.cpp  try.sl
doc/: document.aux  document.fdb_latexmk  document.fls  document.out  document.tex  main.tex  reference.bib
doc/figures/: schematics.eps
include/: cart_MPI.h  cart_pole.h  ppo_nn.h
pybind/: CMakeLists.txt  get_cpp.cpp  get_cpp.py  get_python.cpp  get_python.py  setup.py  tmp.py
results/carpole1node/: proc1_log.txt
results/carpole3node/: proc1_log.txt  proc2_log.txt  proc3_log.txt
single_environment/: cart_MPI.h
src/: cart_pole.h  main.cpp  ppo_nn.cpp  ppo_nn.h
trail_environment/: CMakeLists.txt  cart  cart_MPI.h  cart_pole.cpp  cart_pole.h
trail_multi_environment/: Memory.h  a.out  cart  cart_MPI.h  cart_pole.cpp  cart_pole.h  memory.cpp
try_multi_thread_communication/: comm_trial  comm_trial.cpp
try_new_feature/pybind/: Readme.md  ppo_fish_direction.py  ppo_fish_pybind.cpp  setup.py
try_new_feature/try_multi_thread_communication/: comm_trial.cpp  comm_trial.sl
